--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,13 @@
 
         </activity>
 
+        <activity android:name=".mvp.DataScreen.DataActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"
 
+            >
+
+        </activity>
 
 
 
