--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 def dagger = '2.11'
 def supportLib = '27.1.0'
 def moxy = '1.5.3'
+def room = '1.1.1'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -66,18 +67,14 @@ dependencies {
     kapt "com.arello-mobile:moxy-compiler:$moxy"
 
 
-    // Dagger dependencies
-/*    annotationProcessor "com.google.dagger:dagger-compiler:$dagger"
-    provided 'org.glassfish:javax.annotation:10.0-b28'
-    compile "com.google.dagger:dagger:$dagger"
-    compile "com.google.dagger:dagger-android:$dagger"
-    compile "com.google.dagger:dagger-android-support:$dagger"
-    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger"
-    kapt "com.google.dagger:dagger-compiler:2.11"*/
     compile 'com.google.dagger:dagger:2.11'
     compile 'com.google.dagger:dagger-android-support:2.11'
     kapt 'com.google.dagger:dagger-compiler:2.11'
     kapt 'com.google.dagger:dagger-android-processor:2.11'
+
+    implementation "android.arch.persistence.room:runtime:$room"
+    implementation "android.arch.persistence.room:rxjava2:$room"
+    kapt "android.arch.persistence.room:compiler:$room"
 
 
 }
